--- a/javascripts/discourse/templates/components/user-card-contents.hbs
+++ b/javascripts/discourse/templates/components/user-card-contents.hbs
@@ -58,7 +58,10 @@
                 <div class="d-user-card__location">
                   {{d-icon "map-marker-alt"}}
                   {{#if (theme-setting "google_maps_location")}}
-                    <a href={{user-location this.user.location}} class="label d-user-card__location-link">{{this.user.location}}</a>
+                    <a
+                      href={{user-location this.user.location}}
+                      class="label d-user-card__location-link"
+                    >{{this.user.location}}</a>
                   {{else}}
                     <span class="label">{{this.user.location}}</span>
                   {{/if}}
