FIX: Use correct title for featured topic

--- a/javascripts/discourse/templates/components/user-card-contents.hbs
+++ b/javascripts/discourse/templates/components/user-card-contents.hbs
@@ -195,7 +195,7 @@
                     this.user.featured_topic.id
                   }}
                 >{{html-safe
-                    (replace-emoji this.user.featured_topic.fancy_title)
+                    (replace-emoji this.user.featured_topic.title)
                   }}</LinkTo>
               </div>
             {{/if}}
