--- a/scss/user-card.scss
+++ b/scss/user-card.scss
@@ -379,6 +379,7 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
+    flex-wrap: wrap;
     list-style: none;
     margin: 0;
     gap: 0.5em;
