DEV: Update deprecated Font Awesome icon names

--- a/javascripts/discourse/templates/components/user-card-contents.hbs
+++ b/javascripts/discourse/templates/components/user-card-contents.hbs
@@ -56,7 +56,7 @@
               {{/if}}
               {{#if this.user.location}}
                 <div class="d-user-card__location">
-                  {{d-icon "map-marker-alt"}}
+                  {{d-icon "location-dot"}}
                   {{#if this.themeSettingValid}}
                     <a
                       href={{this.userLocationLink}}
